--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "author": "ryn",
   "license": "MIT",
   "dependencies": {
-    "esm": "^3.2.25"
+    "arg": "^5.0.2",
+    "esm": "^3.2.25",
+    "inquirer": "^8.0.1"
   }
 }
