--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
     "arg": "^5.0.2",
     "esm": "^3.2.25",
     "inquirer": "^8.0.1"
+  },
+  "devDependencies": {
+    "prettier": "2.7.1"
   }
 }
