--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
   "license": "MIT",
   "dependencies": {
     "arg": "^5.0.2",
+    "chalk": "^4.1.2",
     "esm": "^3.2.25",
+    "gradle-to-js": "^2.0.1",
     "inquirer": "^8.0.1"
   },
   "devDependencies": {
