--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "arg": "^5.0.2",
     "chalk": "^4.1.2",
     "esm": "^3.2.25",
+    "execa": "^5.1.1",
     "gradle-to-js": "^2.0.1",
-    "inquirer": "^8.0.1"
+    "inquirer": "^8.0.1",
+    "listr": "^0.14.3"
   },
   "devDependencies": {
     "prettier": "2.7.1"
